Bug 355642 - Desktop Settings closes when changing Layout and pressing Apply
Summary: Desktop Settings closes when changing Layout and pressing Apply
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-20 13:14 UTC by Antonio Larrosa
Modified: 2017-01-11 19:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Larrosa 2015-11-20 13:14:01 UTC
The Desktop Settings window suddenly closes without any crash nor output to the user.



Reproducible: Always

Steps to Reproduce:
1. Right click on the desktop.
2. Select Desktop Settings (or Folder View Settings, depending on the container being used)
* The Desktop Settings window opens
3. Change the Layout combo box to the other option (from Desktop to Folder View, or from Folder View to Desktop)
4. Click Apply


Actual Results:  
The desktop changes its layout but the Desktop Settings window closes (after some seconds) without any output to the user.

Expected Results:  
The desktop should change its layout as it currently does, but the Desktop Settings window shouldn't close. Instead it should be replaced by the Folder View Settings window (or by Desktop Settings if we started with Folder View Settings), preferably by loading/unloading modules in the same window, since the user didn't click on OK, but on Apply.

This has been tested in plasma-desktop 5.4.2, 5.4.3 and on yesterday's master (19th of November). It happens in all versions.

At the moment the window is closed, plasmashell prints 'requesting config for "Desktop" without a containment!' on stdout
Comment 1 Adam 2016-09-29 15:57:12 UTC
also happens in 5.8 beta.
Comment 2 David Edmundson 2017-01-11 15:31:17 UTC
Git commit 3851de096f02497dca4c994f82929dc09a09f9a8 by David Edmundson.
Committed on 11/01/2017 at 15:31.
Pushed by davidedmundson into branch 'master'.

Show descriptive text when changing containment plugins

Summary:
When one changes containment plugin, the rest of the configuration
options don't apply or in some cases don't work - changing a wallpaper
and containment type will result in the old containment getting updated
only to be immediately destroyed.

Fixing that is quite difficult (I spent a while, but not got anything
tidy).

So instead make an intermediate solution of at least not presenting the
user with broken options.

Test Plan: Ran it

Reviewers: #plasma, mart

Reviewed By: mart

Subscribers: broulik, mart, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4034

M  +30   -0    desktoppackage/contents/configuration/ConfigurationContainmentAppearance.qml

https://commits.kde.org/plasma-desktop/3851de096f02497dca4c994f82929dc09a09f9a8
Comment 3 David Edmundson 2017-01-11 19:49:25 UTC
Git commit 8e086d25b57acf7195e45ebcdd9f265e98554df0 by David Edmundson.
Committed on 11/01/2017 at 19:49.
Pushed by davidedmundson into branch 'master'.

If we changed containment with the config open, relaunch the config dialog

Summary:
If we changed containment with the config open, relaunch the config
dialog but for the new containment.

This provides a somewhat seamless changing desktop types.

Test Plan:
Opened config, changed type, hit apply -> dialog was replaced
Opened config, changed activity -> Dialog was replaced
Opened config, Closed Config, changed activity -> Nothing happened

Reviewers: #plasma, mart

Reviewed By: mart

Subscribers: mart, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4086

M  +5    -0    shell/desktopview.cpp

https://commits.kde.org/plasma-workspace/8e086d25b57acf7195e45ebcdd9f265e98554df0