If we changed containment with the config open, relaunch the config dialog

Summary:
If we changed containment with the config open, relaunch the config
dialog but for the new containment.

This provides a somewhat seamless changing desktop types.

BUG: 355642

Test Plan:
Opened config, changed type, hit apply -> dialog was replaced
Opened config, changed activity -> Dialog was replaced
Opened config, Closed Config, changed activity -> Nothing happened

Reviewers: #plasma, mart

Reviewed By: mart

Subscribers: mart, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4086